@@ -5,6 +5,7 @@ Jump Start Changelog
 -----
 
 * Updated FontAwesome to v3.0 -- 40 new icons added.
+* Fixed CSS bug with video icon not showing on featured images linking to videos.
 * Fixed bug with "Category" source selection for Post Slider not working correctly.
 * Fixed issues with `FORCE_SSL_ADMIN` set to true on admin modules.
 * Made Google+ icons standards-compliant.
